implemented frontend and search feature for books fixed issues with registration, signup, and update account details dropped support for updating email added logo at landing page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,17 @@
-*{
+/* * {
   margin: 0px;
   padding: 0px;
+} */
+
+/* body {
+  /* height: 100vh; */
+/* display: flex; */
+
+.logo {
+  height: 100px !important;
+  width: 100px;
 }
 
-body{
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.searchbar {
+  height: 40px !important;
 }
