implemented search feature front end for filtering search in issue books.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,15 @@
-/* * {
+* {
   margin: 0px;
   padding: 0px;
-} */
+}
 
-/* body {
-  /* height: 100vh; */
-/* display: flex; */
-
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  
 .logo {
   height: 100px !important;
   width: 100px;
